Update .config/nushell/config.nu Update .config/nushell/history.txt Update .config/nvim/lazy-lock.json

--- a/private_dot_config/nushell/history.txt
+++ b/private_dot_config/nushell/history.txt
@@ -68,3 +68,6 @@ cd ..
 chezmoi add nushell
 git config --global user.email "inujung@momenti.tv"
 git config --global user.name "inujung"
+chezmoi add nushell
+chezmoi cd
+config nu
