Update .config/nushell/history.txt Update .config/wezterm/wezterm.lua

--- a/private_dot_config/nushell/history.txt
+++ b/private_dot_config/nushell/history.txt
@@ -71,3 +71,8 @@ git config --global user.name "inujung"
 chezmoi add nushell
 chezmoi cd
 config nu
+chezmoi re-add
+config nu
+z wezterm
+ls
+nvim .
