--- a/private_dot_config/nushell/history.txt
+++ b/private_dot_config/nushell/history.txt
@@ -174,3 +174,12 @@ sudo nvim .
 nvim .
 sudo nvim environment
 chezmoi diff
+z ~/.config/chezmoi/
+ls
+nvim .
+exit
+nu
+exit
+nu
+exit
+z ~/.config
